# 2048_game

./: .gitmodules  CMakeLists.txt  Makefile  README.md  evaluate_player.cpp  game_board.cpp  game_board.hpp  game_board_eval.cpp  game_board_eval.hpp  game_constants.hpp  game_master.cpp  game_master.hpp  main.cpp  player.hpp  player_console.hpp  player_dfs.cpp  player_dfs.hpp  player_game_tree.cpp  player_game_tree.hpp  player_minimax.cpp  player_minimax.hpp  player_random.hpp  resources
2048_game/: CMakeLists.txt
2048_game/include/: game_board.hpp  game_board_eval.hpp  game_constants.hpp  game_master.hpp  move.hpp  player.hpp  player_console.hpp  player_game_tree.hpp  visualizer.hpp
2048_game/src/: Main.cpp  game_board.cpp  game_board_eval.cpp  game_master.cpp  player_game_tree.cpp
visualizer/: CMakeLists.txt  Main.cpp  visualizer.hpp
